@@ -1,5 +1,8 @@
 2002-03-02  Jeffrey Stedfast  <fejj@ximian.com>
 
+	* gmime-pgp-mime.c (g_mime_pgp_mime_part_sign): Add support for
+	the pgp-ripemd160 hash type.
+
 	* gmime-filter-chomp.c (g_mime_filter_chomp_new): New stream
 	filter that chomps excess trailing whitespace from the end of the
 	stream. This is needed to update the PGP/MIME code to comply with
